--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -1,31 +1,89 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org/">
-
 <head th:fragment="head">
-
     <!-- Bootstrap stylesheets and script -->
     <link th:href="@{/css/bootstrap.css}" rel="stylesheet" />
     <link th:href="@{/css/techjobs.css}" rel="stylesheet" />
     <script type="text/javascript" th:src="@{/js/bootstrap.js}"></script>
-
     <title th:text="'TechJobs' + ${title == null ? '' : ' :: ' + title}">TechJobs</title>
 </head>
-
 <body>
-
-    <div th:fragment="page-header" class="navbar navbar-inverse navbar-fixed-top">
-        <div class="container">
-            <div class="navbar-header">
-                <a th:href="@{/}" class="navbar-brand">TechJobs</a>
-            </div>
-            <div class="navbar-collapse collapse">
-                <ul class="nav navbar-nav">
-                    <li><a th:href="@{/search}">Search</a></li>
-                    <li><a th:href="@{/list}">List</a></li>
-                </ul>
-            </div>
+<div th:fragment="page-header" class="navbar navbar-inverse navbar-fixed-top">
+    <div class="container">
+        <div class="navbar-header">
+            <a th:href="@{/}" class="navbar-brand">TechJobs</a>
+        </div>
+        <div class="navbar-collapse collapse">
+            <ul class="nav navbar-nav">
+                <li><a th:href="@{/search}">Search</a></li>
+                <li><a th:href="@{/list}">List</a></li>
+            </ul>
         </div>
     </div>
+</div>
+<div th:fragment = "listing">
+    <th:block th:each="job : ${jobs}">
+        <table class="job-listing">
+            <tr>
+                <td>ID:</td>
+                <td th:text="${job.id}"></td>
+            </tr>
+            <tr>
+                <td>Name:</td>
+                <td th:text="${job.name}"></td>
+            </tr>
+            <tr>
+                <td>Employer:</td>
+                <td th:text="${job.employer}"></td>
+            </tr>
+            <tr>
+                <td>Location:</td>
+                <td th:text="${job.location}"></td>
+            </tr>
+            <tr>
+                <td>Position Type:</td>
+                <td th:text="${job.positionType}"></td>
+            </tr>
+            <tr>
+                <td>Core Competency</td>
+                <td th:text="${job.coreCompetency}"></td>
+            </tr>
+        </table>
+    </th:block>
+</div>
+
+<div th:fragment = "searching">
+    <th:block th:each="job : ${jobsArray}">
+        <th:block th:each="aJob: ${job}">
+            <table class="job-listing">
+                <tr>
+                    <td>ID: </td>
+                    <td th:text="${aJob.id}"></td>
+                </tr>
+                <tr>
+                    <td>Name: </td>
+                    <td th:text="${aJob.name}"></td>
+                </tr>
+                <tr>
+                    <td>Employer: </td>
+                    <td th:text="${aJob.employer}"></td>
+                </tr>
+                <tr>
+                    <td>Location: </td>
+                    <td th:text="${aJob.location}"></td>
+                </tr>
+                <tr>
+                    <td>Position Type: </td>
+                    <td th:text="${aJob.positionType}"></td>
+                </tr>
+                <tr>
+                    <td>Skill: </td>
+                    <td th:text="${aJob.coreCompetency}"></td>
+                </tr>
+            </table>
+        </th:block>
+    </th:block>
+</div>
 
 </body>
 </html>
